JumpScript/tests/baselines/reference/FunctionDeclaration4.errors.txt
tests/cases/compiler/FunctionDeclaration4.jump(2,10): error TS2389: Function implementation name must be 'foo'.


==== tests/cases/compiler/FunctionDeclaration4.jump (1 errors) ====
    function foo();
    function bar() { }
             ~~~
!!! error TS2389: Function implementation name must be 'foo'.